app/deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # https://kubernetes.github.io/ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: server-cluster-ip
      port:
        name: http-port
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip
                port:
                  name: http-port
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip
                port:
                  name: http-port
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip
                port:
                  name: http-port
          - path: /version
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip
                port:
                  name: http-port
